Add Google Search Console verification, sitemap.xml, and robots.txt for SEO

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://beautyoftheworld.com" />
     
+    <!-- Google Search Console Verification -->
+    <!-- REPLACE THIS: After copying your verification meta tag from Google Search Console, paste it here -->
+    <!-- Example: <meta name="google-site-verification" content="YOUR_VERIFICATION_CODE" /> -->
+    
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://beautyoftheworld.com/" />
