Add Google Analytics tracking code

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3XWT2BQMPZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-3XWT2BQMPZ');
+    </script>
+    
     <!-- SEO Meta Tags -->
     <title>The Beauty of the World | Explore Earth's Most Stunning Natural Wonders</title>
     <meta name="description" content="Journey through Earth's most breathtaking landscapes, tallest mountains, deepest oceans, and hidden natural wonders. Experience the beauty of our planet like never before." />
