--- a/index.html
+++ b/index.html
@@ -118,6 +118,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500&family=Inter:wght@300;400&display=swap" rel="stylesheet">
+    
+    <!-- Monetag Ad Integration -->
+    <script src="https://quge5.com/88/tag.min.js" data-zone="202142" async data-cfasync="false"></script>
+    
+    <!-- Monetag Immortal Tag - In-Page Push -->
+    <script>(function(s){s.dataset.zone='10465826',s.src='https://nap5k.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
   </head>
   <body>
     <div id="app"></div>
